Fix superfluous semi-colon

--- a/index.css
+++ b/index.css
@@ -88,6 +88,6 @@ textarea {
     max-width: 21.1428571429em; /* 37 * (16 / 14) * 1/2 */
     position: absolute;
     top: 4.5714285714em; /* 4 * (16 / 14) */
-    right: 1.1428571429em; /* 16 / 14 */;
+    right: 1.1428571429em; /* 16 / 14 */
   }
 }
